replaces Files method writeString with write